[OPENMEETINGS-2733] some Sonar issues are addressed