@@ -20,7 +20,6 @@ package org.apache.openmeetings.web.user.rooms;
 
 import static org.apache.openmeetings.web.app.WebSession.getUserId;
 
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import org.apache.openmeetings.db.dao.room.RoomDao;
@@ -62,6 +61,6 @@ public class RoomsTabbedPanel extends UserPanel {
 			public WebMarkupContainer getPanel(String panelId) {
 				return new RoomsPanel(panelId, roomDao.getGroupRooms(g.getId()));
 			}
-		}).collect(Collectors.toList())));
+		}).toList()));
 	}
 }
